<resources>
    <string name="app_name">Kubuk</string>
    <string name="emailVacio">El email no puede estar vacío.</string>
    <string name="emailNoValido">El email introducido no es correcto.</string>
    <string name="emailYaExiste">El email introducido ya está registrado.</string>
    <string name="contraseñaIncorrecta">Contraseña incorrecta, inténtelo de nuevo.</string>
    <string name="passwdVacia">La contraseña no puede estar vacía.</string>
    <string name="passwdLarga">La contraseña debe tener entre 8 y 15 caracteres</string>
    <string name="passwdNoCoincide">Las contraseñas no coinciden.</string>
    <string name="errorServidor">No se ha podido establecer la conexion con el servidor. Prueba de nuevo más tarde</string>
    <string name="nombreVacio">El nombre no puede estar vacío.</string>
    <string name="nombreLargo">El nombre no puede tener más de 10 caracteres.</string>
    <string name="dialog_registrarse_titulo">"Registro Completado"</string>
    <string name="dialog_registrarse">¡Enhorabuena! Te has registrado correctamente.</string>
    <string name="dialog_buttonaceptar">Aceptar</string>
    <string name="errorRegistro">No se pudo registrar el usuario en este momento. Pruebe de nuevo más tarde</string>
    <string name="usuarioNoexiste">No existe ningún usuario con esos datos.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="acceder">ENTRAR</string>
    <string name="register">Registrarse</string>
    <string name="registerQ">¿Aún no te has registrado?</string>
    <string name="name">Nombre</string>
    <string name="passwordConfirm">Confirma tu contraseña</string>
    <string name="photo">Elegir foto...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialog_modificar_titulo">"Modificación Completada"</string>
    <string name="dialog_modificar">¡Datos modificados correctamente!.</string>
    <string name="dialog_modif_buttonaceptar">Aceptar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyAwfSbQ6eePl6mPTc4jLV0bnmBT6IZgj2k</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="preparacion">PREPARACIÓN</string>
    <string name="listacompra">Lista De La Compra</string>
    <string name="insertElemento">Ingrediente</string>
    <string name="insertElementoButton">Añadir Elemento a la lista</string>
    <string name="recetasComunidad">Recetas de la Comunidad</string>
    <string name="misrecetas">Mis Recetas</string>
    <string name="editar">EDITAR</string>
    <string name="publicar">PUBLICAR</string>
    <string name="addreceta">AÑADIR RECETA</string>
    <string name="elegirfoto">ELEGIR FOTO...</string>
    <string name="modDatos">MODIFICAR DATOS</string>
    <string name="eliminarCuenta">ELIMINAR CUENTA</string>
    <string name="capturar">CAPTURAR</string>
    <string name="observ">Observaciones</string>
    <string name="editarReceta">EDITAR RECETA</string>
    <string name="nameReceta">Nombre de la Receta</string>
    <string name="ingredientesm">Ingredientes</string>
    <string name="descr">Descripción de la receta</string>
    <string name="deleteReceta">BORRAR RECETA</string>
    <string name="newReceta">NUEVA RECETA</string>
    <string name="save">Guardar</string>
    <string name="eliminarUserConfT">Eliminar usuario</string>
    <string name="eliminarUserMssg">¿Estás seguro de querer eliminar el usuario?    Se eliminarán todos los datos.</string>
    <string name="continuar">Continuar</string>
    <string name="volver">Volver</string>
    <string name="noeliminado">No se pudo eliminar los datos del usuario en este momento. Pruebe de nuevo más tarde</string>
    <string name="eliminarUsuarioMssg">El usuario y todos sus datos asociados han sido eliminados correctamente.</string>
    <string name="aceptar">Aceptar</string>
    <string name="noMod">No se ha modificado ningún campo</string>
    <string name="modNotDone">No se pudo modificar los datos en este momento. Pruebe de nuevo más tarde</string>
    <string name="noModHechas">No se han modificado datos. Realice algún cambio primero.</string>
    <string name="camNoDetectada">Camara no detectada ,reinicie aplicacion</string>
    <string name="guardado">Guardado exitoso</string>
    <string name="errorGuardar">ERROR EN EL GUARDADO</string>
    <string name="deleteRecetaMssg">Receta eliminada</string>
    <string name="errorRecetaBorrarMssg">Error al borrar</string>
    <string name="datosGet">Datos obtenidos</string>
    <string name="datosUpdated">Datos actualizados</string>
    <string name="recetaDe">"Receta de  "</string>
    <string name="publicada">"  publicada"</string>
    <string name="abrirPantalla">Abrir pantalla editar con datos de</string>
    <string name="donde">¿Dónde nos puedes encontrar?</string>
    <string name="direccion">Paseo Rafael Moreno \'Pitxitxi\' 2</string>
    <string name="administrar">Administrar Cuenta</string>
    <string name="aboutus">Sobre Nosotros</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="noelemSelected">No hay elementos seleccionados</string>
    <string name="eliminaruserT">Eliminar Usuario</string>
    <string name="receta1camposvacios">No puede quedar ningún campo vacío. Pruebe de nuevo.</string>
    <string name="descrtit">Aviso: Descripciones</string>
    <string name="descrmsg">Por favor, separar los pasos de la receta mediante el símbolo /</string>
</resources>