<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".AddEditRecetas.AddRecetaActivity2">


    <EditText
        android:id="@+id/observaciones"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/añadirReceta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:foregroundTint="#000000"
        android:text="@string/observ"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/observaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/camera"
        android:layout_width="279dp"
        android:layout_height="214dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="35dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="108dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/capturar"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/capturar"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#009688"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/capturar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="90dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_grande" />

    <Button
        android:id="@+id/añadirReceta"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="44dp"
        android:background="#359A11"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/addreceta"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>